# AlouFEM

./: CMakeLists.txt  README.md  README.txt  sonar-project.properties
AlouFEM/: CMakeLists.txt  MATHFEM.H
AlouFEM/TestCases/: CMakeLists.txt
AlouFEM/TestCases/PL4/: CMakeLists.txt
AlouFEM/TestCases/PL4/reference/: disp_reference.out
AlouFEM/TestCases/irregular_quad/: CMakeLists.txt
AlouFEM/TestCases/irregular_quad/reference/: disp_reference.out
AlouFEM/src/: DOF.HXX  DOF.cpp  FLOTMTRX.HXX  FLOTMTRX.cpp  FREADER.cpp  GaussPnt.cpp  GaussPnt.hxx  MAIN.cpp  NODE.HXX  NODE.cpp  PLANSTRN.cpp  POLYMTRX.cpp  POLYNO.HXX  SKYLINE.cpp  dof.cpp  dof.hxx  domain.cpp  domain.hxx  element.cpp  element.hxx  flotarry.cpp  flotmtrx.cpp  flotmtrx.hxx  main.cpp  node.cpp  output.cpp  output.hxx  planstrn.cpp  skyline.cpp  skyline.hxx
ExodusII_test/: CMakeLists.txt
ExodusII_test/Read_ExodusII/: CMakeLists.txt  main.cpp
ExodusII_test/Write_ExodusII/: CMakeLists.txt  main.cpp
boost_test/: CMakeLists.txt
boost_test/exception/: CMakeLists.txt
boost_test/exception/BOOST_THROW_EXCEPTION_test/: CMakeLists.txt
boost_test/exception/selectively_accessing_data/: CMakeLists.txt  main.cpp
boost_test/exception/using_boost_exception/: CMakeLists.txt  main.cpp
boost_test/smart_ptr/: CMakeLists.txt
boost_test/smart_ptr/shared_ownership/: CMakeLists.txt  main.cpp
cmake/modules/: FindExodusII.cmake  FindNetCDF.cmake
documentation/: CMakeLists.txt
documentation/user_doc/: CMakeLists.txt  definitions.tex.in  extract_from_src.py  main.tex  skyline_cpp_Skyline_factorized.out_code  skyline_cpp_Skyline_factorized.out_comment
documentation/user_doc/sections/: Element.tex.in  LinEqSolve.tex.in  codesnippets.tex
source/: BODYLOAD.HXX  COLUMN.cpp  COMPILER.DEF  ELEMENT.cpp  FLOTMTRX.cpp  LIST.cpp  MAIN.cpp  NODE.cpp
vector_validation/: CMakeLists.txt
vector_validation/src/: main.cpp
