

MESSAGE("CMAKE_SOURCE_DIR ==== ${CMAKE_SOURCE_DIR}")
MESSAGE("CMAKE_CURRENT_SOURCE_DIR ==== ${CMAKE_CURRENT_SOURCE_DIR}")
COLLECT_SRC_FROM_DIRS(CMAKE_CURRENT_SOURCE_DIR)
MESSAGE("SOURCE_FILES ==== ${SOURCE_FILES}")


INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_EXECUTABLE(AlouFEM ${SOURCE_FILES})