

SET(ALL_SOURCE_FILES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
COLLECT_SRC_FROM_DIRS(ALL_SOURCE_FILES_DIR)

INCLUDE_DIRECTORIES(${ALL_SOURCE_FILES_DIR})
ADD_EXECUTABLE(AlouFEM ${SOURCE_FILES})

if(Boost_FOUND)
  #MESSAGE("Boost_LIBRARIES used: ${Boost_LIBRARIES}")
  target_link_libraries(AlouFEM ${Boost_LIBRARIES})
endif()

ADD_SUBDIRECTORY(TestCases)