
SET(ALOUFEM_EXE_NAME AlouFEM)
SET(ALOUFEM_EXE ${CMAKE_CURRENT_BINARY_DIR}/${ALOUFEM_EXE_NAME})

SET(ALL_SOURCE_FILES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
COLLECT_SRC_FROM_DIRS(ALL_SOURCE_FILES_DIR)

INCLUDE_DIRECTORIES(${ALL_SOURCE_FILES_DIR})
ADD_EXECUTABLE(${ALOUFEM_EXE_NAME} ${SOURCE_FILES})

if(Boost_FOUND)
  #MESSAGE("Boost_LIBRARIES used: ${Boost_LIBRARIES}")
  target_link_libraries(${ALOUFEM_EXE_NAME} ${Boost_LIBRARIES})
endif()

ADD_SUBDIRECTORY(TestCases)

