


SET(ALL_SOURCE_FILES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
COLLECT_SRC_FROM_DIRS(ALL_SOURCE_FILES_DIR)

INCLUDE_DIRECTORIES(${ALL_SOURCE_FILES_DIR})
ADD_EXECUTABLE(VecValidation ${SOURCE_FILES})

if(Boost_FOUND)
  MESSAGE("Boost_LIBRARIES vector: ${Boost_LIBRARIES}")
  target_link_libraries(VecValidation ${Boost_LIBRARIES})
endif()