
SET(TARGET_EXE VecValidation)

SET(ALL_SOURCE_FILES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
COLLECT_SRC_FROM_DIRS(ALL_SOURCE_FILES_DIR)

INCLUDE_DIRECTORIES(${ALL_SOURCE_FILES_DIR})
ADD_EXECUTABLE(${TARGET_EXE} ${SOURCE_FILES})

if(Boost_FOUND)
  MESSAGE("Boost_LIBRARIES vector: ${Boost_LIBRARIES}")
  target_link_libraries(${TARGET_EXE} ${Boost_LIBRARIES})
endif()

SET(VEC_COMPARE_TOOL ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_EXE})
SET(VEC_COMPARE_TOOL ${VEC_COMPARE_TOOL} PARENT_SCOPE)