
SET(TEST_EXE Write_ExodusII)
ADD_EXECUTABLE(${TEST_EXE} main.cpp)

#TARGET_INCLUDE_DIRECTORIES(
#  ${TEST_EXE} SYSTEM
#  PUBLIC NETCDF_INCLUDE_DIR
#  PUBLIC ExodusII_INCLUDE_DIR
#) 

#TARGET_INCLUDE_DIRECTORIES(
#  ${TEST_EXE} SYSTEM
#  
#) 
  
TARGET_LINK_LIBRARIES(
  ${TEST_EXE} LINK_PUBLIC
  ${ExodusII_LIBRARIES}
  ${NETCDF_LIBRARY}
)
